--- a/views/app/editor.html
+++ b/views/app/editor.html
@@ -6,10 +6,10 @@
 
             <div id="ide" style="z-index:0">
                 <textarea id="code">
-                    ball = new Circle(33).fill "#ff00ff"
-                    roo2.add ball
-                    @render = (t) ->
-                      ball.moveTo 200+t/150, 200+t/100
+                    ball = new Circle(33).fill "#ff00ff"&#013
+                    roo2.add ball&#013
+                    @render = (t) ->&#013
+                    &#032&#032 ball.moveTo 200+t/150, 200+t/100
                 </textarea>
             </div>
         </div> <!-- /container -->
