new try for editor

--- a/views/app/editor.html
+++ b/views/app/editor.html
@@ -6,10 +6,7 @@
 
             <div id="ide" style="z-index:0">
                 <textarea id="code">
-                    ball = new Circle(33).fill "#ff00ff"&#013
-                    roo2.add ball&#013
-                    @render = (t) ->&#013
-                    &#032&#032 ball.moveTo 200+t/150, 200+t/100
+                    {code}
                 </textarea>
             </div>
         </div> <!-- /container -->
