--- a/views/app/index.html
+++ b/views/app/index.html
@@ -41,7 +41,7 @@
             {{#if equal($url, '/editor')}}
                 <ul class="nav navbar-nav navbar-right">
                     <button type="button" id="run" x-bind="click: editor.run" class="btn btn-default navbar-btn">
-                        <span class="glyphicon glyphicon-play-circle">
+                        <span id="runbutton" class="glyphicon glyphicon-play-circle">
                     </button>
                 </ul>
             {{/}}
