--- a/views/app/index.html
+++ b/views/app/index.html
@@ -69,6 +69,7 @@
 
     <script src="js/muu2d/muu2dbase.js"></script>
     <script src="js/muu2d/muu2dshapes.js"></script>
+    <script src="js/muu2d/muu2dActor.js"></script>
 
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
