--- a/views/app/list.html
+++ b/views/app/list.html
@@ -1,33 +1,30 @@
 <Body:>
   <div class="row">
-    <form class="span3" x-bind="submit: list.add">
-      <h3>Add item</h3>
+    <form class="span3" x-bind="submit: world.add">
+      <h3>Add world</h3>
       <fieldset>
         <label>Name</label>
-        <input type="text" value={_page.newItem.name}>
+        <input type="text" value={_page.newWorld.name}>
         <label>Note</label>
-        <textarea>{_page.newItem.note}</textarea>
+        <textarea>{_page.newWorld.note}</textarea>
         <div>
           <button type="submit" class="btn">Add</button>
         </div>
       </fieldset>
-      <div class="well visits">
-        <b>Fun fact:</b> You've visited the list {_page.user.visits} times.
-      </div>
     </form>
     <div class="span8 offset1">
       <table class="table">
         <thead>
           <tr>
-            <th>Item</th>
+            <th>World</th>
             <th>Note</th>
           </tr>
         </thead>
         <tbody>
-          {#each _page.items as :item}
+          {#each _page.worlds as :world}
             <tr>
-              <td>{{:item.name}}</td>
-              <td>{{:item.note}}</td>
+              <td>{{:world.name}}</td>
+              <td>{{:world.note}}</td>
               <td><button class="btn" x-bind="click: list.remove">Remove</button></td>
             </tr>
           {/}
