--- a/views/app/home.html
+++ b/views/app/home.html
@@ -1,16 +1,24 @@
 <Body:>
   <div class="jumbotron">
-    <h1>Hello world!</h1>
-    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <a class="btn btn-large btn-success" href="/list">Try it now</a>
+    <h1>PHysics by Editing Worlds</h1>
+    <p class="lead">
+    Physics are cool, they make the universe more awesome. The dislike of the physics curriculum in the school is justified because they don't teach physics.
+    They teach to use physics to get results.
+    </p>
+    <p>
+    Our proposal is Learn Phew, learn physics by editing worlds, by making the laws of physics tangible in the browser.
+    </p>
+    <a class="btn btn-large btn-success" href="/worlds">See the possibilities</a>
   </div>
 
   <hr>
 
   <div class="row-fluid marketing">
     <div class="span6">
-      <h4>Subheading</h4>
-      <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+      <h4>Universal widgets</h4>
+      <p>
+      Wherever you need to show an explanation of a phenomenon, you can create a world, and open the link in any device (bricks not included)
+      </p>
 
       <h4>Subheading</h4>
       <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
