--- a/views/app/home.html
+++ b/views/app/home.html
@@ -8,7 +8,7 @@
     <p>
     Our proposal is Learn Phew, learn physics by editing worlds, by making the laws of physics tangible in the browser.
     </p>
-    <a class="btn btn-large btn-success" href="/worlds">See the possibilities</a>
+    <a class="btn btn-large btn-success" href="/editor">Change the world</a>
   </div>
 
   <hr>
